Ran ruff linter

--- a/nbs/02_updates.ipynb
+++ b/nbs/02_updates.ipynb
@@ -44,30 +44,29 @@
    ],
    "source": [
     "#| export\n",
+    "import gc\n",
     "import os\n",
     "from decimal import Decimal, getcontext\n",
-    "from typing import Union, List\n",
-    "import gc\n",
+    "from typing import List, Union\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import pyodbc\n",
-    "from rich.console import Console\n",
-    "from rich import print\n",
-    "from pyarrow import ArrowInvalid, ArrowTypeError\n",
-    "from fastcore.xtras import Path\n",
-    "from fastcore.utils import partialler\n",
+    "from dotenv import find_dotenv, load_dotenv\n",
     "from fastcore.parallel import parallel\n",
-    "import pyodbc\n",
+    "from fastcore.utils import partialler\n",
+    "from fastcore.xtras import Path\n",
+    "from pyarrow import ArrowInvalid, ArrowTypeError\n",
     "from pymongo import MongoClient\n",
-    "from dotenv import load_dotenv, find_dotenv\n",
+    "from rich import print\n",
+    "from rich.console import Console\n",
     "\n",
-    "from extracao.aero.icao import get_icao\n",
     "from extracao.aero.aisgeo import get_aisg\n",
     "from extracao.aero.aisweb import get_aisw\n",
+    "from extracao.aero.icao import get_icao\n",
     "from extracao.aero.redemet import get_redemet\n",
     "from extracao.constants import *\n",
-    "from extracao.format import parse_bw, merge_on_frequency, _read_df\n",
+    "from extracao.format import _read_df, merge_on_frequency, parse_bw\n",
     "\n",
     "getcontext().prec = 5\n",
     "load_dotenv(find_dotenv())\n"
@@ -825,14 +824,20 @@
    "outputs": [],
    "source": [
     "#|export\n",
-    "def split_designacao(df: pd.DataFrame)->pd.DataFrame:\n",
+    "def split_designacao(df: pd.DataFrame) -> pd.DataFrame:\n",
     "    \"\"\"Parse a bandwidth string to extract the numerical component and a character class\"\"\"\n",
-    "    df[\"Designação_Emissão\"] = df[\"Designação_Emissão\"].str.replace(\",\", \" \").str.strip().str.upper()\n",
+    "    df[\"Designação_Emissão\"] = (\n",
+    "        df[\"Designação_Emissão\"].str.replace(\",\", \" \").str.strip().str.upper()\n",
+    "    )\n",
     "    df[\"Designação_Emissão\"] = df[\"Designação_Emissão\"].str.split(\" \")\n",
     "    df = df.explode(\"Designação_Emissão\")\n",
     "    df = df[df[\"Designação_Emissão\"] != \"/\"]  # Removes empty rows\n",
-    "    df[[\"Largura_Emissão(kHz)\", \"Classe_Emissão\"]] = df[\"Designação_Emissão\"].apply(parse_bw).tolist()\n",
-    "    df[[\"Largura_Emissão(kHz)\", \"Classe_Emissão\"]] = df[[\"Largura_Emissão(kHz)\", \"Classe_Emissão\"]].astype('string')\n",
+    "    df[[\"Largura_Emissão(kHz)\", \"Classe_Emissão\"]] = (\n",
+    "        df[\"Designação_Emissão\"].apply(parse_bw).tolist()\n",
+    "    )\n",
+    "    df[[\"Largura_Emissão(kHz)\", \"Classe_Emissão\"]] = df[\n",
+    "        [\"Largura_Emissão(kHz)\", \"Classe_Emissão\"]\n",
+    "    ].astype(\"string\")\n",
     "    return df.drop(\"Designação_Emissão\", axis=1)\n"
    ]
   },
@@ -856,9 +861,7 @@
     ") -> pd.DataFrame:  # DataFrame com os dados atualizados\n",
     "    \"\"\"Efetua a query na tabela de Radiodifusão no banco mongoDB `mongo_client` e atualiza o arquivo local\"\"\"\n",
     "    console = Console()\n",
-    "    with console.status(\n",
-    "        \"Consolidando os dados do Mosaico...\", spinner=\"runner\"\n",
-    "    ) as status:\n",
+    "    with console.status(\"Consolidando os dados do Mosaico...\", spinner=\"runner\"):\n",
     "        database = mongo_client[\"sms\"]\n",
     "        collection = database[\"srd\"]\n",
     "        list_data = list(collection.find(MONGO_SRD, projection=COLS_SRD.keys()))\n",
@@ -1189,6 +1192,7 @@
     "    df = pd.DataFrame(list(query), columns=COLS_TELECOM.keys(), dtype=\"string\")\n",
     "    return _process_telecom(df, folder)\n",
     "\n",
+    "\n",
     "def _process_telecom(\n",
     "    df: pd.DataFrame,  # Dataframe não processado de dados do Mosaico\n",
     "    folder: Union[str, Path],  # Pasta onde salvar os arquivos\n",
@@ -1464,9 +1468,11 @@
     "    radares = pd.read_csv(os.environ[\"PATH_RADAR\"])\n",
     "    for df in [aisw, aisg, redemet, radares]:\n",
     "        icao = merge_on_frequency(icao, df)\n",
-    "    \n",
+    "\n",
     "    icao = icao.sort_values(by=icao.columns.to_list(), ignore_index=True)\n",
-    "    icao = icao.drop_duplicates(subset=['Frequency', 'Latitude', 'Longitude'], keep='last', ignore_index=True)\n",
+    "    icao = icao.drop_duplicates(\n",
+    "        subset=[\"Frequency\", \"Latitude\", \"Longitude\"], keep=\"last\", ignore_index=True\n",
+    "    )\n",
     "    icao = icao.astype(\n",
     "        {\n",
     "            \"Frequency\": \"float64\",\n",
@@ -1478,7 +1484,7 @@
     "    # TODO: Eliminate this eventually\n",
     "    icao.loc[np.isclose(icao.Longitude, -472.033447), \"Longitude\"] = -47.2033447\n",
     "    icao.loc[np.isclose(icao.Longitude, 69.934998), \"Longitude\"] = -69.934998\n",
-    "    \n",
+    "\n",
     "    return _save_df(icao, folder, \"aero\")\n"
    ]
   },
