--- a/nbs/03_format.ipynb
+++ b/nbs/03_format.ipynb
@@ -45,19 +45,16 @@
    "source": [
     "# | export\n",
     "import re\n",
-    "from typing import Iterable, Tuple, Union, List\n",
+    "from typing import List, Tuple, Union\n",
     "\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
+    "from dotenv import find_dotenv, load_dotenv\n",
     "from fastcore.utils import listify\n",
     "from fastcore.xtras import Path\n",
     "from geopy.distance import geodesic\n",
-    "from rich.progress import Progress\n",
     "from pyarrow import ArrowInvalid\n",
-    "from dotenv import load_dotenv, find_dotenv\n",
     "\n",
-    "\n",
-    "from extracao.constants import BW, BW_pattern, APP_ANALISE_PT, APP_ANALISE_EN\n",
+    "from extracao.constants import APP_ANALISE_EN, APP_ANALISE_PT, BW, BW_pattern\n",
     "\n",
     "RE_BW = re.compile(BW_pattern)\n",
     "MAX_DIST = 10  # Km\n",
@@ -79,7 +76,7 @@
     "        df = pd.read_parquet(file)\n",
     "    except (ArrowInvalid, FileNotFoundError) as e:\n",
     "        raise e(f\"Error when reading {file}\") from e\n",
-    "    return df"
+    "    return df\n"
    ]
   },
   {
@@ -111,7 +108,7 @@
     "            number = float(match[1])\n",
     "        classe = match[4]\n",
     "        return str(multiplier * number), str(classe)\n",
-    "    return \"-1\", \"-1\""
+    "    return \"-1\", \"-1\"\n"
    ]
   },
   {
@@ -198,7 +195,7 @@
     "    #     \"-1\",\n",
     "    # ]  # Paliativo...\n",
     "    for c in [\"Latitude\", \"Longitude\"]:\n",
-    "        df[c] = df[c].fillna('-1').astype(\"float32\")\n",
+    "        df[c] = df[c].fillna(\"-1\").astype(\"float32\")\n",
     "    df[\"Frequency\"] = df[\"Frequency\"].astype(\"float64\")\n",
     "    df.loc[df.Service.isin([\"\", \"-1\"]), \"Service\"] = pd.NA\n",
     "    df[\"Service\"] = df.Service.fillna(\"-1\").astype(\"int16\")\n",
@@ -219,7 +216,7 @@
     "    df[\"Id\"] = df.Id.astype(\"string\")\n",
     "    df.loc[df.Description == \"\", \"Description\"] = pd.NA\n",
     "    df[\"Description\"] = df[\"Description\"].astype(\"string\").fillna(\"NI\")\n",
-    "    return df[[\"Id\"] + list(APP_ANALISE_EN)]"
+    "    return df[[\"Id\"] + list(APP_ANALISE_EN)]\n"
    ]
   },
   {
@@ -276,10 +273,14 @@
     "    left_cols: List[str] = [c for c in df.columns if y not in c]\n",
     "    right_cols: List[str] = [c for c in df.columns if x not in c]\n",
     "\n",
-    "    only_left = df.loc[left, left_cols].drop_duplicates(subset=left_cols, ignore_index=True)\n",
+    "    only_left = df.loc[left, left_cols].drop_duplicates(\n",
+    "        subset=left_cols, ignore_index=True\n",
+    "    )\n",
     "    only_left.columns = [c.removesuffix(x) for c in left_cols]\n",
     "\n",
-    "    only_right = df.loc[right, right_cols].drop_duplicates(subset=right_cols, ignore_index=True)\n",
+    "    only_right = df.loc[right, right_cols].drop_duplicates(\n",
+    "        subset=right_cols, ignore_index=True\n",
+    "    )\n",
     "    only_right.columns = [c.removesuffix(y) for c in right_cols]\n",
     "\n",
     "    intersection_left = len(df_left) - len(only_left)\n",
@@ -293,14 +294,18 @@
     "\n",
     "    df_both = df[both].sort_values(\"Distance\", ignore_index=True)\n",
     "\n",
-    "    filter_left_cols = df_both.columns[:len(df_left.columns)].to_list()\n",
-    "    filter_right_cols = listify(on) + df_both.columns[len(df_left.columns):-1].to_list() # the -1 is to eliminate the distance\n",
-    "   \n",
+    "    filter_left_cols = df_both.columns[: len(df_left.columns)].to_list()\n",
+    "    filter_right_cols = (\n",
+    "        listify(on) + df_both.columns[len(df_left.columns) : -1].to_list()\n",
+    "    )  # the -1 is to eliminate the distance\n",
+    "\n",
     "    df_both_left = df_both.groupby(filter_left_cols, as_index=False).first()\n",
     "    df_both_right = df_both.groupby(filter_right_cols, as_index=False).first()\n",
     "\n",
-    "    assert len(df_both_left) == intersection_left, f\"O Agrupamento por colunas únicas não tem o comprimento esperado: {len(df_both_left)}!= {intersection_left}\"\n",
-    "    \n",
+    "    assert (\n",
+    "        len(df_both_left) == intersection_left\n",
+    "    ), f\"O Agrupamento por colunas únicas não tem o comprimento esperado: {len(df_both_left)}!= {intersection_left}\"\n",
+    "\n",
     "    assert (\n",
     "        len(df_both_right) == intersection_right\n",
     "    ), f\"Error: {len(df_both_right)}!= {intersection_right}\"\n",
@@ -333,7 +338,7 @@
     "    assert len(df_both_far_left) + len(df_close_merge) + len(df_both_left) == (\n",
     "        len(df_left) - len(only_left)\n",
     "    ), \"Verifique os passos de mesclagem, validação falhou!\"\n",
-    "    \n",
+    "\n",
     "    assert len(df_both_far_right) + len(df_close_merge) + len(df_both_right) == (\n",
     "        len(df_right) - len(only_right)\n",
     "    ), \"Verifique os passos de mesclagem, validação falhou!\"\n",
@@ -347,7 +352,7 @@
     "        .iloc[:, range(len(original_cols))]\n",
     "    )\n",
     "    df_both.columns = original_cols\n",
-    "    \n",
+    "\n",
     "    df_both = (\n",
     "        pd.merge(\n",
     "            df_both, df_final_merge, how=\"left\", on=filter_right_cols, indicator=True\n",
@@ -360,17 +365,35 @@
     "    assert (\n",
     "        df_both.Distance > MAX_DIST\n",
     "    ).all(), \"Verifique os passos de mesclagem, validação falhou!\"\n",
-    "    \n",
-    "    assert pd.merge(\n",
-    "        df_both, df_both_far_left, how=\"left\", on=filter_left_cols, indicator=True, copy=False\n",
-    "    ).loc[lambda x: x[\"_merge\"] == \"left_only\"\n",
-    "    ].iloc[:, range(len(original_cols))].empty, \"Verifique os passos de mesclagem, validação falhou!\"\n",
-    "    \n",
-    "    assert pd.merge(\n",
-    "        df_both, df_both_far_right, how=\"left\", on=filter_right_cols, indicator=True, copy=False\n",
-    "    ).loc[lambda x: x[\"_merge\"] == \"left_only\"\n",
-    "    ].iloc[:, range(len(original_cols))].empty, \"Verifique os passos de mesclagem, validação falhou!\"\n",
-    "    \n",
+    "\n",
+    "    assert (\n",
+    "        pd.merge(\n",
+    "            df_both,\n",
+    "            df_both_far_left,\n",
+    "            how=\"left\",\n",
+    "            on=filter_left_cols,\n",
+    "            indicator=True,\n",
+    "            copy=False,\n",
+    "        )\n",
+    "        .loc[lambda x: x[\"_merge\"] == \"left_only\"]\n",
+    "        .iloc[:, range(len(original_cols))]\n",
+    "        .empty\n",
+    "    ), \"Verifique os passos de mesclagem, validação falhou!\"\n",
+    "\n",
+    "    assert (\n",
+    "        pd.merge(\n",
+    "            df_both,\n",
+    "            df_both_far_right,\n",
+    "            how=\"left\",\n",
+    "            on=filter_right_cols,\n",
+    "            indicator=True,\n",
+    "            copy=False,\n",
+    "        )\n",
+    "        .loc[lambda x: x[\"_merge\"] == \"left_only\"]\n",
+    "        .iloc[:, range(len(original_cols))]\n",
+    "        .empty\n",
+    "    ), \"Verifique os passos de mesclagem, validação falhou!\"\n",
+    "\n",
     "    df_final_merge[f\"{description}{x}\"] = (\n",
     "        df_final_merge[f\"{description}{x}\"]\n",
     "        + \" | \"\n",
