--- a/nbs/07_aisweb.ipynb
+++ b/nbs/07_aisweb.ipynb
@@ -48,15 +48,16 @@
     "#| export\n",
     "import os\n",
     "import re\n",
-    "from typing import Iterable\n",
     "from functools import cached_property\n",
+    "from typing import Iterable\n",
     "\n",
+    "import pandas as pd\n",
     "import requests\n",
     "import xmltodict\n",
-    "import pandas as pd\n",
-    "from fastcore.utils import store_attr\n",
+    "from dotenv import find_dotenv, load_dotenv\n",
     "from fastcore.parallel import parallel\n",
-    "from dotenv import load_dotenv, find_dotenv\n",
+    "from fastcore.utils import store_attr\n",
+    "\n",
     "from extracao.aero.icao import map_channels\n",
     "\n",
     "load_dotenv(find_dotenv(), override=True)"
@@ -89,7 +90,7 @@
     "URL = \"http://aisweb.decea.gov.br/api/?apiKey={}&apiPass={}&area=rotaer&rowend=10000\"\n",
     "TYPE = [\"COM\", \"NAV\"]\n",
     "COLUMNS = [\"Frequency\", \"Latitude\", \"Longitude\", \"Description\"]\n",
-    "UNIQUE_COLS = ['Frequency', 'Latitude', 'Longitude']"
+    "UNIQUE_COLS = [\"Frequency\", \"Latitude\", \"Longitude\"]\n"
    ]
   },
   {
@@ -284,7 +285,7 @@
     "            pause=0.1,\n",
     "            progress=True,\n",
     "        )\n",
-    "        df = pd.concat(records).astype('string')\n",
+    "        df = pd.concat(records).astype(\"string\")\n",
     "        return map_channels(df, \"AISW\").drop_duplicates(UNIQUE_COLS, ignore_index=True)\n"
    ]
   },
