--- a/nbs/08_aisgeo.ipynb
+++ b/nbs/08_aisgeo.ipynb
@@ -55,13 +55,14 @@
    ],
    "source": [
     "#| export\n",
-    "import os\n",
     "import json\n",
-    "from urllib.request import urlopen\n",
-    "from typing import List\n",
-    "from dotenv import load_dotenv, find_dotenv\n",
-    "import pandas as pd\n",
+    "import os\n",
     "from pathlib import Path\n",
+    "from typing import List\n",
+    "from urllib.request import urlopen\n",
+    "\n",
+    "import pandas as pd\n",
+    "from dotenv import find_dotenv, load_dotenv\n",
     "\n",
     "load_dotenv(find_dotenv(), override=True)"
    ]
@@ -121,7 +122,7 @@
     "    \"Channel\",\n",
     ")\n",
     "\n",
-    "UNIQUE_COLS = ['Frequency', 'Latitude', 'Longitude']"
+    "UNIQUE_COLS = [\"Frequency\", \"Latitude\", \"Longitude\"]\n"
    ]
   },
   {
@@ -162,7 +163,9 @@
     "    cols: List[str],  # Subconjunto de Colunas relevantes do DataFrame\n",
     ") -> pd.DataFrame:  # Dataframe com os dados de frequência devidamente processados\n",
     "    if cols == COLS_DME:\n",
-    "        df_channels = pd.read_csv(f'{Path(__file__).parent}/{os.environ[\"PATH_CHANNELS\"]}', dtype=\"string\")\n",
+    "        df_channels = pd.read_csv(\n",
+    "            f'{Path(__file__).parent}/{os.environ[\"PATH_CHANNELS\"]}', dtype=\"string\"\n",
+    "        )\n",
     "        df = df.dropna(subset=[cols[0]])\n",
     "        df[\"Channel\"] = df[cols[0]].astype(\"int\").astype(\"string\") + df[cols[1]]\n",
     "        df[\"Frequency\"] = -1.0\n",
@@ -180,7 +183,7 @@
     "            .apply(lambda x: convert_frequency(x[0], x[1]), axis=1)\n",
     "            .astype(\"float\")\n",
     "        )\n",
-    "    return df"
+    "    return df\n"
    ]
   },
   {
