--- a/nbs/09_redemet.ipynb
+++ b/nbs/09_redemet.ipynb
@@ -46,12 +46,13 @@
    ],
    "source": [
     "#| export\n",
-    "import os\n",
     "import json\n",
+    "import os\n",
     "from datetime import datetime\n",
     "from urllib.request import urlopen\n",
+    "\n",
     "import pandas as pd\n",
-    "from dotenv import load_dotenv, find_dotenv\n",
+    "from dotenv import find_dotenv, load_dotenv\n",
     "\n",
     "load_dotenv(find_dotenv(), override=True)"
    ]
@@ -80,7 +81,7 @@
    "source": [
     "#| export\n",
     "URL = \"https://api-redemet.decea.mil.br/produtos/radar/maxcappi?api_key={}&{}\"\n",
-    "UNIQUE_COLS = ['Frequency', 'Latitude', 'Longitude']"
+    "UNIQUE_COLS = [\"Frequency\", \"Latitude\", \"Longitude\"]\n"
    ]
   },
   {
