--- a/nbs/05_main.ipynb
+++ b/nbs/05_main.ipynb
@@ -45,23 +45,22 @@
    ],
    "source": [
     "#| export\n",
-    "import os\n",
-    "from pathlib import Path\n",
     "import json\n",
-    "from typing import Union\n",
     "from datetime import datetime\n",
+    "from pathlib import Path\n",
+    "from typing import Union\n",
     "\n",
     "import pandas as pd\n",
-    "from fastcore.test import *\n",
-    "from rich import print\n",
     "import pyodbc\n",
+    "from dotenv import find_dotenv, load_dotenv\n",
+    "from fastcore.test import *\n",
     "from pymongo import MongoClient\n",
-    "from dotenv import load_dotenv, find_dotenv\n",
+    "from rich import print\n",
     "\n",
-    "from extracao.reading import read_base, read_aero\n",
-    "from extracao.format import merge_on_frequency, _filter_matlab, _format_matlab\n",
+    "from extracao.format import _filter_matlab, _format_matlab, merge_on_frequency\n",
+    "from extracao.reading import read_aero, read_base\n",
     "\n",
-    "load_dotenv(find_dotenv(), override=True)"
+    "load_dotenv(find_dotenv(), override=True)\n"
    ]
   },
   {
