--- a/nbs/06_icao.ipynb
+++ b/nbs/06_icao.ipynb
@@ -49,9 +49,9 @@
     "import os\n",
     "from pathlib import Path\n",
     "from typing import Iterable\n",
+    "\n",
     "import pandas as pd\n",
-    "from dotenv import load_dotenv, find_dotenv\n",
-    "from fastcore.test import test_close\n",
+    "from dotenv import find_dotenv, load_dotenv\n",
     "\n",
     "load_dotenv(find_dotenv(), override=True)"
    ]
@@ -81,7 +81,7 @@
     "#| export\n",
     "COLS_NAV = [\"Frequency\", \"Latitude\", \"Longitude\", \"Facility\", \"Location\", \"NS\", \"WE\"]\n",
     "COLS_COM = [\"Frequency\", \"CoordLat\", \"CoordLong\", \"DOC\", \"Location\", \"NS\", \"WE\"]\n",
-    "UNIQUE_COLS = ['Frequency', 'Latitude', 'Longitude']"
+    "UNIQUE_COLS = [\"Frequency\", \"Latitude\", \"Longitude\"]\n"
    ]
   },
   {
@@ -111,7 +111,7 @@
     "    multiplier = 1 if hemisphere == \"E\" else -1\n",
     "    return multiplier * (\n",
     "        float(lon[1:3]) + float(lon[4:6]) / 60 + float(lon[7:9]) / 3600.0\n",
-    "    )"
+    "    )\n"
    ]
   },
   {
@@ -148,7 +148,7 @@
     "        lambda x: convert_longitude(x[\"Longitude\"], x[\"WE\"]), axis=1\n",
     "    )\n",
     "    df[\"Description\"] = \"[ICAO] \" + df.Facility + \", \" + df.Location\n",
-    "    return df[[\"Frequency\", \"Latitude\", \"Longitude\", \"Description\"]]"
+    "    return df[[\"Frequency\", \"Latitude\", \"Longitude\", \"Description\"]]\n"
    ]
   },
   {
@@ -163,7 +163,10 @@
     "    origem: str,  # Descrição da emissão a ser substituída\n",
     ") -> pd.DataFrame:\n",
     "    \"\"\"Mapeia os canais contidos em `df` e adiciona os registros ILS/DME caso houver\"\"\"\n",
-    "    chs = pd.read_csv(f'{Path(__file__).resolve().parent}/{os.environ[\"PATH_CHANNELS\"]}', dtype=\"string\")\n",
+    "    chs = pd.read_csv(\n",
+    "        f'{Path(__file__).resolve().parent}/{os.environ[\"PATH_CHANNELS\"]}',\n",
+    "        dtype=\"string\",\n",
+    "    )\n",
     "    for row in df[df.Description.str.contains(\"ILS|DME\")].itertuples():\n",
     "        if not (ch := chs[(chs.VOR_ILSloc == row.Frequency)]).empty:\n",
     "            for i, c in enumerate(ch.values[0][2:]):\n",
@@ -179,7 +182,7 @@
     "                        f\"{row.Description.replace(origem , 'DOC')} ({freq_type})\"\n",
     "                    )\n",
     "                    df.loc[len(df)] = [c, row.Latitude, row.Longitude, description]\n",
-    "    return df"
+    "    return df\n"
    ]
   },
   {
@@ -189,7 +192,9 @@
    "outputs": [],
    "source": [
     "#| export    \n",
-    "def get_icao() -> pd.DataFrame:  # DataFrame com frequências, coordenadas e descrição das estações\n",
+    "def get_icao() -> (\n",
+    "    pd.DataFrame\n",
+    "):  # DataFrame com frequências, coordenadas e descrição das estações\n",
     "    \"\"\"Lê, concatena e pós-processa os arquivos do ICAO\"\"\"\n",
     "    path_nav: str = f'{Path(__file__).resolve().parent}/{os.environ[\"PATH_NAV\"]}'\n",
     "    path_com: str = f'{Path(__file__).resolve().parent}/{os.environ[\"PATH_COM\"]}'\n",
