Finalizada exploração de dados do SMP Liberada versão tratada e agregada dos dados de SMP

--- a/nbs/03_format.ipynb
+++ b/nbs/03_format.ipynb
@@ -108,7 +108,7 @@
     "            number = float(match[1])\n",
     "        classe = match[4]\n",
     "        return str(multiplier * number), str(classe)\n",
-    "    return \"-1\", \"-1\"\n"
+    "    return pd.NA, pd.NA\n"
    ]
   },
   {
