Corrigido tratamento de erro para #Estação não numérico
Adicionado também tratamento de erros genérico caso haja erro na atualização dos dados aeronáuticos. A chamada fillna com o argumento inplace=True no pandas não parece estar funcionando

--- a/nbs/01_constants.ipynb
+++ b/nbs/01_constants.ipynb
@@ -27,7 +27,7 @@
    "outputs": [],
    "source": [
     "#|export\n",
-    "import re   "
+    "import re"
    ]
   },
   {
@@ -437,7 +437,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
   }
