--- a/nbs/03_format.ipynb
+++ b/nbs/03_format.ipynb
@@ -138,12 +138,12 @@
     "        \"Município_IBGE\",\n",
     "        \"UF\",\n",
     "    ]\n",
-    "    df.loc[:, cols_desc].fillna(\"NI\", inplace=True)\n",
+    "    df.loc[:, cols_desc] = df.loc[:, cols_desc].fillna(\"NI\")\n",
     "\n",
     "    df[\"Descrição\"] = (\n",
     "        \"[\"\n",
     "        + df.Fonte\n",
-    "        + \"] \"\n",
+    "        + \"] \"rsilva\n",
     "        + df.Status\n",
     "        + \", \"\n",
     "        + df.Classe\n",
@@ -184,25 +184,28 @@
     ") -> pd.DataFrame:  # Arquivo de Dados formatado para leitura no Matlab\n",
     "    \"\"\"Formata o arquivo final de dados para o formato esperado pela aplicação em Matlab\"\"\"\n",
     "    df = df.astype(\"string\")\n",
-    "    # df.loc[len(df), :] = [\n",
-    "    #     \"-1\",\n",
-    "    #     \"-15.7801\",\n",
-    "    #     \"-47.9292\",\n",
-    "    #     \"[TEMP] L, FX, Estação do SMP licenciada (cadastro temporário)\",\n",
-    "    #     \"10\",\n",
-    "    #     \"999999999\",\n",
-    "    #     \"NI\",\n",
-    "    #     \"-1\",\n",
-    "    # ]  # Paliativo...\n",
+    "    df.loc[len(df), :] = [\n",
+    "        \"-1\",\n",
+    "        \"-15.7801\",\n",
+    "        \"-47.9292\",\n",
+    "        \"[TEMP] L, FX, Estação do SMP licenciada (cadastro temporário)\",\n",
+    "        \"10\",\n",
+    "        \"999999999\",\n",
+    "        \"NI\",\n",
+    "        \"-1\",\n",
+    "    ]  # Paliativo...\n",
+    "    for c in df.columns:\n",
+    "        if c not in [\"Description\", \"Class\"]:\n",
+    "            df[c] = pd.to_numeric(df[c], errors=\"coerce\")\n",
     "    for c in [\"Latitude\", \"Longitude\"]:\n",
-    "        df[c] = df[c].fillna(\"-1\").astype(\"float32\")\n",
+    "        df[c] = df[c].fillna(-1).astype(\"float32\")\n",
     "    df[\"Frequency\"] = df[\"Frequency\"].astype(\"float64\")\n",
-    "    df.loc[df.Service.isin([\"\", \"-1\"]), \"Service\"] = pd.NA\n",
-    "    df[\"Service\"] = df.Service.fillna(\"-1\").astype(\"int16\")\n",
-    "    df.loc[df.Station.isin([\"\", \"-1\"]), \"Station\"] = pd.NA\n",
-    "    df[\"Station\"] = df.Station.fillna(\"-1\").astype(\"int32\")\n",
-    "    df.loc[df.BW.isin([\"\", \"-1\"]), \"BW\"] = pd.NA\n",
-    "    df[\"BW\"] = df[\"BW\"].astype(\"float32\").fillna(-1)\n",
+    "    # df.loc[df.Service.isin([\"\", \"-1\"]), \"Service\"] = pd.NA\n",
+    "    df[\"Service\"] = df.Service.fillna(-1).astype(\"int16\")\n",
+    "    # df.loc[df.Station.isin([\"\", \"-1\"]), \"Station\"] = pd.NA\n",
+    "    df[\"Station\"] = df.Station.fillna(-1).astype(\"int32\")\n",
+    "    # df.loc[df.BW.isin([\"\", \"-1\"]), \"BW\"] = pd.NA\n",
+    "    df[\"BW\"] = df[\"BW\"].fillna(-1).astype(\"float32\")\n",
     "    df.loc[df[\"Class\"].isin([\"\", \"-1\"]), \"Class\"] = pd.NA\n",
     "    df[\"Class\"] = df.Class.fillna(\"NI\").astype(\"category\")\n",
     "    df = df[df.Frequency <= LIMIT_FREQ]\n",
@@ -473,7 +476,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
   }
