--- a/nbs/06_icao.ipynb
+++ b/nbs/06_icao.ipynb
@@ -81,7 +81,7 @@
     "#| export\n",
     "COLS_NAV = [\"Frequency\", \"Latitude\", \"Longitude\", \"Facility\", \"Location\", \"NS\", \"WE\"]\n",
     "COLS_COM = [\"Frequency\", \"CoordLat\", \"CoordLong\", \"DOC\", \"Location\", \"NS\", \"WE\"]\n",
-    "UNIQUE_COLS = [\"Frequency\", \"Latitude\", \"Longitude\"]\n"
+    "UNIQUE_COLS = [\"Frequency\", \"Latitude\", \"Longitude\"]"
    ]
   },
   {
@@ -111,7 +111,7 @@
     "    multiplier = 1 if hemisphere == \"E\" else -1\n",
     "    return multiplier * (\n",
     "        float(lon[1:3]) + float(lon[4:6]) / 60 + float(lon[7:9]) / 3600.0\n",
-    "    )\n"
+    "    )"
    ]
   },
   {
@@ -148,7 +148,7 @@
     "        lambda x: convert_longitude(x[\"Longitude\"], x[\"WE\"]), axis=1\n",
     "    )\n",
     "    df[\"Description\"] = \"[ICAO] \" + df.Facility + \", \" + df.Location\n",
-    "    return df[[\"Frequency\", \"Latitude\", \"Longitude\", \"Description\"]]\n"
+    "    return df[[\"Frequency\", \"Latitude\", \"Longitude\", \"Description\"]]"
    ]
   },
   {
@@ -182,7 +182,7 @@
     "                        f\"{row.Description.replace(origem , 'DOC')} ({freq_type})\"\n",
     "                    )\n",
     "                    df.loc[len(df)] = [c, row.Latitude, row.Longitude, description]\n",
-    "    return df\n"
+    "    return df"
    ]
   },
   {
@@ -363,7 +363,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
   }
