--- a/nbs/07_aisweb.ipynb
+++ b/nbs/07_aisweb.ipynb
@@ -90,7 +90,7 @@
     "URL = \"http://aisweb.decea.gov.br/api/?apiKey={}&apiPass={}&area=rotaer&rowend=10000\"\n",
     "TYPE = [\"COM\", \"NAV\"]\n",
     "COLUMNS = [\"Frequency\", \"Latitude\", \"Longitude\", \"Description\"]\n",
-    "UNIQUE_COLS = [\"Frequency\", \"Latitude\", \"Longitude\"]\n"
+    "UNIQUE_COLS = [\"Frequency\", \"Latitude\", \"Longitude\"]"
    ]
   },
   {
@@ -119,7 +119,7 @@
     "    multiplier = 1 if hemisphere == \"E\" else -1\n",
     "    return multiplier * (\n",
     "        float(lon[:3]) + float(lon[3:5]) / 60 + float(lon[6:8]) / 3600.0\n",
-    "    )\n"
+    "    )"
    ]
   },
   {
@@ -286,7 +286,7 @@
     "            progress=True,\n",
     "        )\n",
     "        df = pd.concat(records).astype(\"string\")\n",
-    "        return map_channels(df, \"AISW\").drop_duplicates(UNIQUE_COLS, ignore_index=True)\n"
+    "        return map_channels(df, \"AISW\").drop_duplicates(UNIQUE_COLS, ignore_index=True)"
    ]
   },
   {
@@ -541,7 +541,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
   }
