--- a/nbs/_smp.ipynb
+++ b/nbs/_smp.ipynb
@@ -699,7 +699,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:dados]",
+   "display_name": "conda-env-dados-py",
    "language": "python",
    "name": "conda-env-dados-py"
   }
