--- a/nbs/05_main.ipynb
+++ b/nbs/05_main.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "80feb396",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "#| default_exp main\n",
     "import sys,os\n",
@@ -28,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "ac0c52ca",
    "metadata": {},
    "outputs": [
@@ -38,7 +47,7 @@
        "True"
       ]
      },
-     "execution_count": null,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,12 +69,12 @@
     "from extracao.format import _filter_matlab, _format_matlab, merge_on_frequency\n",
     "from extracao.reading import read_aero, read_base\n",
     "\n",
-    "load_dotenv(find_dotenv(), override=True)\n"
+    "load_dotenv(find_dotenv(), override=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "659d39b0",
    "metadata": {},
    "outputs": [],
@@ -87,7 +96,10 @@
     "    mod_times = {\"ANATEL\": datetime.now().strftime(\"%d/%m/%Y %H:%M:%S\")}\n",
     "    print(\":airplane:[blue]Requisitando os dados da Aeronáutica.\")\n",
     "    update = all([connSQL, clientMongoDB])\n",
-    "    aero = read_aero(path, update=update)\n",
+    "    try:\n",
+    "        aero = read_aero(path, update=update)\n",
+    "    except Exception:\n",
+    "        aero = read_aero(path)\n",
     "    mod_times[\"AERONAUTICA\"] = datetime.now().strftime(\"%d/%m/%Y %H:%M:%S\")\n",
     "    print(\":spoon:[yellow]Mesclando os dados da Aeronáutica.\")\n",
     "    df = _format_matlab(merge_on_frequency(df, aero))\n",
@@ -103,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "40a510fe",
    "metadata": {},
    "outputs": [],
@@ -118,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "ccb75aa7",
    "metadata": {},
    "outputs": [],
@@ -129,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "81f093fe",
    "metadata": {},
    "outputs": [],
@@ -140,53 +152,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "feb70a90",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'version': '4.0.5',\n",
-       " 'gitVersion': '3739429dd92b92d1b0ab120911a23d50bf03c412',\n",
-       " 'targetMinOS': 'Windows 7/Windows Server 2008 R2',\n",
-       " 'modules': [],\n",
-       " 'allocator': 'tcmalloc',\n",
-       " 'javascriptEngine': 'mozjs',\n",
-       " 'sysInfo': 'deprecated',\n",
-       " 'versionArray': [4, 0, 5, 0],\n",
-       " 'openssl': {'running': 'Windows SChannel'},\n",
-       " 'buildEnvironment': {'distmod': '2008plus-ssl',\n",
-       "  'distarch': 'x86_64',\n",
-       "  'cc': 'cl: Microsoft (R) C/C++ Optimizing Compiler Version 19.00.24223 for x64',\n",
-       "  'ccflags': '/nologo /EHsc /W3 /wd4355 /wd4800 /wd4267 /wd4244 /wd4290 /wd4068 /wd4351 /wd4373 /we4013 /we4099 /we4930 /WX /errorReport:none /MD /O2 /Oy- /bigobj /utf-8 /Zc:rvalueCast /Zc:strictStrings /volatile:iso /Gw /Gy /Zc:inline',\n",
-       "  'cxx': 'cl: Microsoft (R) C/C++ Optimizing Compiler Version 19.00.24223 for x64',\n",
-       "  'cxxflags': '/TP',\n",
-       "  'linkflags': '/nologo /DEBUG /INCREMENTAL:NO /LARGEADDRESSAWARE /OPT:REF',\n",
-       "  'target_arch': 'x86_64',\n",
-       "  'target_os': 'windows'},\n",
-       " 'bits': 64,\n",
-       " 'debug': False,\n",
-       " 'maxBsonObjectSize': 16777216,\n",
-       " 'storageEngines': ['devnull', 'ephemeralForTest', 'mmapv1', 'wiredTiger'],\n",
-       " 'ok': 1.0}"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#|eval: false\n",
-    "conn = connect_db()\n",
-    "uri = os.environ['MONGO_URI']\n",
-    "mongo_client = MongoClient(uri)"
+    "# conn = connect_db()\n",
+    "# uri = os.environ['MONGO_URI']\n",
+    "# mongo_client = MongoClient(uri)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "ac178478",
    "metadata": {},
    "outputs": [
@@ -259,9 +238,271 @@
    "source": [
     "#|eval: false\n",
     "# os.chdir(f\"{Path.cwd().parent}/extracao/aero\")\n",
-    "# df = get_db(folder)\n",
-    "df = get_db(folder) #, conn, mongo_client)\n",
-    "#df = pd.read_parquet(folder / 'AnatelDB.parquet.gzip')"
+    "df = get_db(folder)\n",
+    "# df = get_db(folder) #, conn, mongo_client)\n",
+    "# df = pd.read_parquet(folder / 'AnatelDB.parquet.gzip')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "2560098f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>Frequency</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Service</th>\n",
+       "      <th>Station</th>\n",
+       "      <th>Class</th>\n",
+       "      <th>BW</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>533304</th>\n",
+       "      <td>#533305</td>\n",
+       "      <td>689.0</td>\n",
+       "      <td>-18.8529</td>\n",
+       "      <td>-41.947102</td>\n",
+       "      <td>[MOS] TV-C2, A, Fundacao Dom Jose Heleno (5041...</td>\n",
+       "      <td>247</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>NI</td>\n",
+       "      <td>5700.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Id  Frequency  Latitude  Longitude  \\\n",
+       "533304  #533305      689.0  -18.8529 -41.947102   \n",
+       "\n",
+       "                                              Description  Service  Station  \\\n",
+       "533304  [MOS] TV-C2, A, Fundacao Dom Jose Heleno (5041...      247       -1   \n",
+       "\n",
+       "       Class      BW  \n",
+       "533304    NI  5700.0  "
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df.Description.str.contains('50412989719')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "699ed615",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>Frequency</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Service</th>\n",
+       "      <th>Station</th>\n",
+       "      <th>Class</th>\n",
+       "      <th>BW</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>525819</th>\n",
+       "      <td>#525820</td>\n",
+       "      <td>587.0</td>\n",
+       "      <td>-18.8529</td>\n",
+       "      <td>-41.947102</td>\n",
+       "      <td>[MOS] TV-C2, A, Fundacao Radio Tv Educativa Ri...</td>\n",
+       "      <td>247</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>NI</td>\n",
+       "      <td>5700.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Id  Frequency  Latitude  Longitude  \\\n",
+       "525819  #525820      587.0  -18.8529 -41.947102   \n",
+       "\n",
+       "                                              Description  Service  Station  \\\n",
+       "525819  [MOS] TV-C2, A, Fundacao Radio Tv Educativa Ri...      247       -1   \n",
+       "\n",
+       "       Class      BW  \n",
+       "525819    NI  5700.0  "
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df.Description.str.contains('50414510100')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "a3d8efc2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mos = _filter_matlab(mos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "1df2437a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Frequency</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Service</th>\n",
+       "      <th>Station</th>\n",
+       "      <th>Class</th>\n",
+       "      <th>BW</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>587973</th>\n",
+       "      <td>689.0</td>\n",
+       "      <td>-18.852900000000000</td>\n",
+       "      <td>-41.947100000000000</td>\n",
+       "      <td>[MOS] TV-C2, A, Fundacao Dom Jose Heleno (5041...</td>\n",
+       "      <td>247</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>5700.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Frequency             Latitude            Longitude  \\\n",
+       "587973     689.0  -18.852900000000000  -41.947100000000000   \n",
+       "\n",
+       "                                              Description Service Station  \\\n",
+       "587973  [MOS] TV-C2, A, Fundacao Dom Jose Heleno (5041...     247    <NA>   \n",
+       "\n",
+       "       Class      BW  \n",
+       "587973  <NA>  5700.0  "
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mos[mos.Description.str.contains('50412989719')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "5e01b0de",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Frequency                    689.0\n",
+       "Latitude       -18.852900000000000\n",
+       "Longitude      -41.947100000000000\n",
+       "Description                   <NA>\n",
+       "Service                        247\n",
+       "Station                       <NA>\n",
+       "Class                         <NA>\n",
+       "BW                          5700.0\n",
+       "Name: 588008, dtype: string"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mos.loc[588008]"
    ]
   },
   {
@@ -289,9 +530,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
