--- a/nbs/08_aisgeo.ipynb
+++ b/nbs/08_aisgeo.ipynb
@@ -122,7 +122,7 @@
     "    \"Channel\",\n",
     ")\n",
     "\n",
-    "UNIQUE_COLS = [\"Frequency\", \"Latitude\", \"Longitude\"]\n"
+    "UNIQUE_COLS = [\"Frequency\", \"Latitude\", \"Longitude\"]"
    ]
   },
   {
@@ -148,7 +148,7 @@
     "            result = freq * 1000\n",
     "        case _:\n",
     "            result = -1\n",
-    "    return result\n"
+    "    return result"
    ]
   },
   {
@@ -183,7 +183,7 @@
     "            .apply(lambda x: convert_frequency(x[0], x[1]), axis=1)\n",
     "            .astype(\"float\")\n",
     "        )\n",
-    "    return df\n"
+    "    return df"
    ]
   },
   {
@@ -206,7 +206,7 @@
     "            cols[2]: \"Latitude\",\n",
     "            cols[3]: \"Longitude\",\n",
     "        }\n",
-    "    )\n"
+    "    )"
    ]
   },
   {
@@ -237,7 +237,7 @@
     "        data_json[\"features\"],\n",
     "    ).filter(cols, axis=1)\n",
     "    df = _process_frequency(df, cols)\n",
-    "    return _filter_df(df, cols)\n"
+    "    return _filter_df(df, cols)"
    ]
   },
   {
@@ -1039,7 +1039,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
   }
