--- a/nbs/09_redemet.ipynb
+++ b/nbs/09_redemet.ipynb
@@ -81,7 +81,7 @@
    "source": [
     "#| export\n",
     "URL = \"https://api-redemet.decea.mil.br/produtos/radar/maxcappi?api_key={}&{}\"\n",
-    "UNIQUE_COLS = [\"Frequency\", \"Latitude\", \"Longitude\"]\n"
+    "UNIQUE_COLS = [\"Frequency\", \"Latitude\", \"Longitude\"]"
    ]
   },
   {
@@ -416,7 +416,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
   }
