--- a/nbs/_data-refactor.ipynb
+++ b/nbs/_data-refactor.ipynb
@@ -60,7 +60,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "db",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
   }
