--- a/nbs/_smp_eda.ipynb
+++ b/nbs/_smp_eda.ipynb
@@ -2210,7 +2210,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "anateldb",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
   }
