:bug: fixed bug in updates.py:validar_coords
There was no verification for when the subset to be verified is empty

--- a/nbs/02_updates.ipynb
+++ b/nbs/02_updates.ipynb
@@ -69,7 +69,7 @@
     "from extracao.format import _read_df, merge_on_frequency, parse_bw\n",
     "\n",
     "getcontext().prec = 5\n",
-    "load_dotenv(find_dotenv())"
+    "load_dotenv(find_dotenv())\n"
    ]
   },
   {
@@ -101,7 +101,7 @@
     "        f\"Trusted_Connection={trusted_conn};\"\n",
     "        f\"MultipleActiveResultSets={mult_results};\",\n",
     "        timeout=TIMEOUT,\n",
-    "    )"
+    "    )\n"
    ]
   },
   {
@@ -164,7 +164,7 @@
     "        df.Num_Serviço == \"205\", \"Frequência\"\n",
     "    ].apply(lambda x: Decimal(x) / Decimal(1000))\n",
     "    df.loc[:, \"Validade_RF\"] = df.Validade_RF.astype(\"string\").str.slice(0, 10)\n",
-    "    return df"
+    "    return df\n"
    ]
   },
   {
@@ -195,7 +195,7 @@
     "        df.to_parquet(file, compression=\"gzip\", index=False)\n",
     "    except (ArrowInvalid, ArrowTypeError) as e:\n",
     "        raise e(f\"Não possível salvar o arquivo parquet {file}\") from e\n",
-    "    return df"
+    "    return df\n"
    ]
   },
   {
@@ -252,7 +252,7 @@
     "    )\n",
     "    df.drop([\"Fase\", \"Situação\"], axis=1, inplace=True)\n",
     "    df = df.loc[:, COLUNAS]\n",
-    "    return _save_df(df, folder, \"radcom\")"
+    "    return _save_df(df, folder, \"radcom\")\n"
    ]
   },
   {
@@ -580,7 +580,7 @@
     "    stel.drop(\"Unidade\", axis=1, inplace=True)\n",
     "    stel[\"Multiplicidade\"] = 1\n",
     "    stel = stel.loc[:, COLUNAS]\n",
-    "    return _save_df(stel, folder, \"stel\")"
+    "    return _save_df(stel, folder, \"stel\")\n"
    ]
   },
   {
@@ -842,7 +842,7 @@
     "    df[[\"Largura_Emissão(kHz)\", \"Classe_Emissão\"]] = df[\n",
     "        [\"Largura_Emissão(kHz)\", \"Classe_Emissão\"]\n",
     "    ].astype(\"string\")\n",
-    "    return df.drop(\"Designação_Emissão\", axis=1)"
+    "    return df.drop(\"Designação_Emissão\", axis=1)\n"
    ]
   },
   {
@@ -886,7 +886,7 @@
     "        mosaico.loc[mosaico.Classe_Emissão == \"\", \"Classe_Emissão\"] = pd.NA\n",
     "        mosaico[\"Multiplicidade\"] = 1\n",
     "        mosaico = mosaico.loc[:, COLUNAS]\n",
-    "    return _save_df(mosaico, folder, \"srd\")"
+    "    return _save_df(mosaico, folder, \"srd\")\n"
    ]
   },
   {
@@ -1230,7 +1230,7 @@
     "    gc.collect()\n",
     "    df_sub = df_sub.reset_index()\n",
     "    df_sub = df_sub.loc[:, COLUNAS]\n",
-    "    return _save_df(df_sub, folder, \"telecom\")"
+    "    return _save_df(df_sub, folder, \"telecom\")\n"
    ]
   },
   {
@@ -1489,7 +1489,7 @@
     "    icao.loc[np.isclose(icao.Longitude, -472.033447), \"Longitude\"] = -47.2033447\n",
     "    icao.loc[np.isclose(icao.Longitude, 69.934998), \"Longitude\"] = -69.934998\n",
     "\n",
-    "    return _save_df(icao, folder, \"aero\")"
+    "    return _save_df(icao, folder, \"aero\")\n"
    ]
   },
   {
@@ -1648,7 +1648,7 @@
     "        is_valid = result.COORD_VALIDA\n",
     "    if connector is None:\n",
     "        del conn\n",
-    "    return [str(mun), str(lat), str(long), str(is_valid)]"
+    "    return [str(mun), str(lat), str(long), str(is_valid)]\n"
    ]
   },
   {
@@ -1693,7 +1693,7 @@
     "    ].fillna(\"-1\")\n",
     "\n",
     "    # # Drop the _merge column\n",
-    "    return df_cache.drop(columns=\"_merge\")"
+    "    return df_cache.drop(columns=\"_merge\")\n"
    ]
   },
   {
@@ -1710,8 +1710,6 @@
     ") -> pd.DataFrame:  # DataFrame com as coordenadas validadas na base do IBGE\n",
     "    \"\"\"Valida as coordenadas consultado a Base Corporativa do IBGE, excluindo o que já está no cache na versão anterior\"\"\"\n",
     "\n",
-    "    ibge = [\"Município_IBGE\", \"Latitude_IBGE\", \"Longitude_IBGE\", \"Coords_Valida_IBGE\"]\n",
-    "\n",
     "    df_cache = update_cached_df(df.astype(\"string\"), df_cache.astype(\"string\"))\n",
     "\n",
     "    municipios = pd.read_csv(\n",
@@ -1727,26 +1725,32 @@
     "\n",
     "    subset = df_cache.Coords_Valida_IBGE.isna()\n",
     "\n",
-    "    linhas = list(\n",
+    "    if linhas := list(\n",
     "        df_cache.loc[\n",
     "            subset, [\"Município\", \"Código_Município\", \"Latitude\", \"Longitude\"]\n",
     "        ].itertuples()\n",
-    "    )\n",
+    "    ):\n",
+    "        func = partialler(validar_coords, connector=connector)\n",
     "\n",
-    "    func = partialler(validar_coords, connector=connector)\n",
+    "        # Gambiarra para evitar compartilhamento da mesma conexão de banco em diferentes threads\n",
+    "        n_workers = 1 if connector is not None else 20\n",
     "\n",
-    "    # Gambiarra para evitar compartilhamento da mesma conexão de banco em diferentes threads\n",
-    "    n_workers = 1 if connector is not None else 20\n",
+    "        ibge = [\n",
+    "            \"Município_IBGE\",\n",
+    "            \"Latitude_IBGE\",\n",
+    "            \"Longitude_IBGE\",\n",
+    "            \"Coords_Valida_IBGE\",\n",
+    "        ]\n",
     "\n",
-    "    df_cache.loc[subset, ibge] = parallel(\n",
-    "        func, linhas, threadpool=True, n_workers=n_workers, progress=True\n",
-    "    )\n",
+    "        df_cache.loc[subset, ibge] = parallel(\n",
+    "            func, linhas, threadpool=True, n_workers=n_workers, progress=True\n",
+    "        )\n",
     "\n",
     "    df_cache = df_cache.astype(\"string\")\n",
     "\n",
     "    df_cache.loc[df_cache.Coords_Valida_IBGE == \"-1\", \"Coords_Valida_IBGE\"] = pd.NA\n",
     "\n",
-    "    return df_cache"
+    "    return df_cache\n"
    ]
   },
   {
