--- a/nbs/03_format.ipynb
+++ b/nbs/03_format.ipynb
@@ -59,7 +59,7 @@
     "RE_BW = re.compile(BW_pattern)\n",
     "MAX_DIST = 10  # Km\n",
     "LIMIT_FREQ = 84812.50\n",
-    "load_dotenv(find_dotenv(), override=True)\n"
+    "load_dotenv(find_dotenv(), override=True)"
    ]
   },
   {
@@ -76,7 +76,7 @@
     "        df = pd.read_parquet(file)\n",
     "    except (ArrowInvalid, FileNotFoundError) as e:\n",
     "        raise e(f\"Error when reading {file}\") from e\n",
-    "    return df\n"
+    "    return df"
    ]
   },
   {
@@ -108,7 +108,7 @@
     "            number = float(match[1])\n",
     "        classe = match[4]\n",
     "        return str(multiplier * number), str(classe)\n",
-    "    return pd.NA, pd.NA\n"
+    "    return pd.NA, pd.NA"
    ]
   },
   {
@@ -143,7 +143,7 @@
     "    df[\"Descrição\"] = (\n",
     "        \"[\"\n",
     "        + df.Fonte\n",
-    "        + \"] \"rsilva\n",
+    "        + \"] \"\n",
     "        + df.Status\n",
     "        + \", \"\n",
     "        + df.Classe\n",
@@ -169,7 +169,7 @@
     "\n",
     "    df = df.loc[:, APP_ANALISE_PT]\n",
     "    df.columns = APP_ANALISE_EN\n",
-    "    return df\n"
+    "    return df"
    ]
   },
   {
@@ -200,11 +200,8 @@
     "    for c in [\"Latitude\", \"Longitude\"]:\n",
     "        df[c] = df[c].fillna(-1).astype(\"float32\")\n",
     "    df[\"Frequency\"] = df[\"Frequency\"].astype(\"float64\")\n",
-    "    # df.loc[df.Service.isin([\"\", \"-1\"]), \"Service\"] = pd.NA\n",
     "    df[\"Service\"] = df.Service.fillna(-1).astype(\"int16\")\n",
-    "    # df.loc[df.Station.isin([\"\", \"-1\"]), \"Station\"] = pd.NA\n",
     "    df[\"Station\"] = df.Station.fillna(-1).astype(\"int32\")\n",
-    "    # df.loc[df.BW.isin([\"\", \"-1\"]), \"BW\"] = pd.NA\n",
     "    df[\"BW\"] = df[\"BW\"].fillna(-1).astype(\"float32\")\n",
     "    df.loc[df[\"Class\"].isin([\"\", \"-1\"]), \"Class\"] = pd.NA\n",
     "    df[\"Class\"] = df.Class.fillna(\"NI\").astype(\"category\")\n",
@@ -219,7 +216,7 @@
     "    df[\"Id\"] = df.Id.astype(\"string\")\n",
     "    df.loc[df.Description == \"\", \"Description\"] = pd.NA\n",
     "    df[\"Description\"] = df[\"Description\"].astype(\"string\").fillna(\"NI\")\n",
-    "    return df[[\"Id\"] + list(APP_ANALISE_EN)]\n"
+    "    return df[[\"Id\"] + list(APP_ANALISE_EN)]"
    ]
   },
   {
